@@ -10,9 +10,11 @@ Agregada conversión de archivos ZX81 P a P81, y P81 a P
 Permitir grabar pantalla de ZX80/81 a archivo .scr
 Permitir LOAD "nombre" de un archivo .P81 de ZX81
 Agregado previews de archivos .O (ZX80): mostrar listado basic
-Agregado previews de archivos .P/.P81 (ZX81) cuando no tienen pantalla grabada en el archivo: mostrar listado basic
+Agregado previews de archivos .P/.81/.P81 (ZX81) cuando no tienen pantalla grabada en el archivo: mostrar listado basic
+Agregada algunas acciones para archivos .81
 Agregado soporte de joystick real para SDL2
 Agregadas funciones directas para aumentar/reducir/silenciar el Volumen del Sonido
+Permitir crear enlace a un archivo en el ZX Desktop, desde File utilities
 Permitir grabar una nota de texto en un snapshot ZSF
 Permitir encontrar archivos de rom al ejecutar ZEsarUX desde una carpeta actual diferente de la ruta de las roms
 Permitir seleccionar máquina según tipo familia (Spectrum, ZX80, ZX81, CPC, etc)
